--- a/demo/test/index1.html
+++ b/demo/test/index1.html
@@ -7,6 +7,6 @@
   </head>
   <body>loading...</body>
   <script type="text/javascript">
-    location.href = 'sanctpalace://com.meizu.compaign/main'
+    location.href = 'sanctpalace://com.meizu.compaign/main?position=1'
   </script>
 </html>
