--- a/export/r/vue-computed/index.html
+++ b/export/r/vue-computed/index.html
@@ -38,6 +38,8 @@
           
 <h1>Vue依赖收集与更新</h1>
 
+<p style='color:red;font-size: 16px;'>新版已经不一样</p>
+
 <h2>实例</h2>
 
 先出个小题，你是否能准确、清晰地判断出，下边代码，<code>doTest</code>方法中所有`console.log`的打印结果呢？
