--- a/dandan/work_nav.html
+++ b/dandan/work_nav.html
@@ -17,13 +17,15 @@
     <audio src="../export/files/khz/bg.mp3" autoplay='autoplay' controls='controls' style="opacity:0;"></audio>
   </div>
   <div id="source" style='display:none;'>
-    这是一份契约<br/>
-    与上帝签订<br/>
-    我作担保<br/><div>&nbsp;</div>
-
     从此刻起<br/>
     愿你快乐、幸福<br/>
-    遇见一切美好与幸运
+    遇见一切美好与幸运<br/><div>&nbsp;</div>
+    愿永远十八，愿来日方长<br/>
+    愿岁月静好，安暖相伴<br/><div>&nbsp;</div>
+    与你在一起的<br/>
+    不在一起的每一天<br/>
+    都爱你<br/><div>&nbsp;</div>
+    生日快乐！
   </div>
   <div id="output-wrap" class='output-wrap'>
     <span id="output"></span>
