--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -11,7 +11,7 @@
 {% block content %}
 		<a class='item_title' href="https://juejin.im/post/5d6332b1f265da039402153b">flutter json数据处理</a>
 		<p>
-			主要讲解在flutter中，怎么处理json数据，以json_serializable为主
+			主要讲解在flutter中，怎么处理json数据，以json_serializable为主。
 			<span class='nav_time'>2019-8-26</span>
 		</p>
 		<a class='item_title' href="/demo/carousel/cssCarousel.html">纯CSS实现图片轮播</a>
