--- a/abc/work_nav.html
+++ b/abc/work_nav.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block content %}
+		<a class='item_title' href="https://juejin.im/post/5d637f87e51d4561b674c482">flutter可伸缩文本区域实现</a>
+		<p>
+			主要讲解在flutter中，可伸缩文本区域的实现逻辑
+			<span class='nav_time'>2019-8-26</span>
+		</p>
 		<a class='item_title' href="https://juejin.im/post/5d6332b1f265da039402153b">flutter json数据处理</a>
 		<p>
 			主要讲解在flutter中，怎么处理json数据，以json_serializable为主。
