--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -30,7 +30,16 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          
+		<a class='item_title' href="https://juejin.im/post/5d637f87e51d4561b674c482">flutter可伸缩文本区域实现</a>
+		<p>
+			主要讲解在flutter中，可伸缩文本区域的实现逻辑
+			<span class='nav_time'>2019-8-26</span>
+		</p>
+		<a class='item_title' href="https://juejin.im/post/5d6332b1f265da039402153b">flutter json数据处理</a>
+		<p>
+			主要讲解在flutter中，怎么处理json数据，以json_serializable为主。
+			<span class='nav_time'>2019-8-26</span>
+		</p>      
 		<a class='item_title' href="/demo/carousel/cssCarousel.html">纯CSS实现图片轮播</a>
 		<p>
 			纯CSS实现图片轮播的例子
