--- a/demo/sql-util/index.html
+++ b/demo/sql-util/index.html
@@ -59,9 +59,13 @@
       placeholder="sql"
       v-model="sql">
     </el-input>
+    <br>
+    <br>
     <hr>
-    <a href="cetus.meizu.com">cetus.meizu.com</a>
-    <img src="" alt="">
+    <br>
+    <a href="https://cetus.meizu.com" target='_blank'>cetus.meizu.com</a>
+    <br>
+    <img src="./111.jpg" alt="" style='width:100%;'>
   </div>
   <script src="./index.js" charset="utf-8"></script>
 </body>
