--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
   <body>
     <div><a href="./zxjump/index.html" target='_blank'>读书deeplink跳转</a></div>
     <div><a href="./rqcode/index.html" target='_blank'>二维码生成</a></div>
-    <div><a href="./toBase64/index.html" target='_blank'>图片转base64</a></div>
+    <div><a href="./toBase64/work_nav.html" target='_blank'>图片转base64</a></div>
     <div><a href="./sql-util/index.html" target='_blank'>meizu sql生成</a></div>
     <div><a href="./utils/formatImgUrl.html" target='_blank'>图片格式化</a></div>
   </body>
