--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -29,15 +29,26 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
 
-        <section id="main-content"><!--内容主体-->
+				<section id="main-content"><!--内容主体-->
+		<a class='item_title' href="../export/views/work/my_time/index.html">用flutter写了个番茄钟</a>
+		<p>
+			<ul>
+				<li>flutter常规开发</li>
+				<li>flutter bloc</li>
+				<li>flutter系统api调用</li>
+				<li>flutter国际化</li>
+				<li>友盟埋点sdk集成</li>
+			</ul>
+			<span class='nav_time'>2019-8-26</span>
+		</p>
 		<a class='item_title' href="https://juejin.im/post/5d637f87e51d4561b674c482">flutter可伸缩文本区域实现</a>
 		<p>
-			主要讲解在flutter中，可伸缩文本区域的实现逻辑
+			主要讲解在flutter中，可伸缩文本区域的实现逻辑(跳转本人掘金博客文章)
 			<span class='nav_time'>2019-8-26</span>
 		</p>
 		<a class='item_title' href="https://juejin.im/post/5d6332b1f265da039402153b">flutter json数据处理</a>
 		<p>
-			主要讲解在flutter中，怎么处理json数据，以json_serializable为主。
+			主要讲解在flutter中，怎么处理json数据，以json_serializable为主。(跳转本人掘金博客文章)
 			<span class='nav_time'>2019-8-26</span>
 		</p>      
 		<a class='item_title' href="/demo/carousel/cssCarousel.html">纯CSS实现图片轮播</a>
