--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -30,6 +30,16 @@
       <div class="inner clearfix">
 
 				<section id="main-content"><!--内容主体-->
+		<a class='item_title' href="https://juejin.im/post/5db2c50a518825648e227927">puppeteer爬虫上线实践</a>
+		<p>
+			<ul>
+				<li>爬虫实现简介</li>
+				<li>亚马逊爬取踩坑</li>
+				<li>上线实践</li>
+			</ul>
+			(跳转本人掘金博客文章)
+			<span class='nav_time'>2019-10-28</span>
+		</p>
 		<a class='item_title' href="../export/views/work/my_time/index.html">用flutter写了个番茄钟</a>
 		<p>
 			<ul>
