--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -30,6 +30,11 @@
       <div class="inner clearfix">
 
 				<section id="main-content"><!--内容主体-->
+		<a class='item_title' href="https://juejin.im/post/5de70a96e51d45583b43678f">react->Ant Design->form表单控件按需加载实现</a>
+		<p>
+			react折腾系列之一：如何在ant框架下，Form表单中实现getFieldDecorator包装控件的按需加载(跳转本人掘金博客文章)
+			<span class='nav_time'>2019-12-04</span>
+		</p>
 		<a class='item_title' href="https://juejin.im/post/5db2c50a518825648e227927">puppeteer爬虫上线实践</a>
 		<p>
 			<ul>
