--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -30,6 +30,11 @@
       <div class="inner clearfix">
 
 				<section id="main-content"><!--内容主体-->
+		<a class='item_title' href="https://juejin.im/post/5dfaedf15188251264166ff5">滑屏项目动画优化实践</a>
+		<p>
+			观看前端动画与低端机大PK(跳转本人掘金博客文章)
+			<span class='nav_time'>2019-12-19</span>
+		</p>
 		<a class='item_title' href="https://juejin.im/post/5ded9ff3f265da33de3a6b84">react->Ant Design->日期控件DatePicker数据提交格式设置</a>
 		<p>
 			react折腾系列之二：如何在ant框架下，form表单中，灵活设置DatePicker提交服务器的数据格式。(跳转本人掘金博客文章)
