--- a/def/work_nav.html
+++ b/def/work_nav.html
@@ -30,6 +30,11 @@
       <div class="inner clearfix">
 
 				<section id="main-content"><!--内容主体-->
+		<a class='item_title' href="https://juejin.im/post/5e100159f265da5d390e705d">Vue依赖收集与更新</a>
+		<p>
+			Vue依赖收集与更新的原理解析(跳转本人掘金博客文章)
+			<span class='nav_time'>2020-01-4</span>
+		</p>
 		<a class='item_title' href="https://juejin.im/post/5dfaedf15188251264166ff5">滑屏项目动画优化实践</a>
 		<p>
 			观看前端动画与低端机大PK(跳转本人掘金博客文章)
@@ -80,11 +85,6 @@
 		<p>
 			纯CSS实现图片轮播的例子
 			<span class='nav_time'>2019-2-27</span>
-		</p>
-		<a class='item_title' href="../export/r/vue-computed/index.html">Vue依赖收集与更新</a>
-		<p>
-			Vue依赖收集与更新的原理解析
-			<span class='nav_time'>2018-12-5</span>
 		</p>
 		<a class='item_title' href="/wiki/#!ebook/index.md">网页读书项目技术实现</a>
 		<p>
