--- a/demo/index.html
+++ b/demo/index.html
@@ -10,5 +10,6 @@
     <div><a href="./toBase64/work_nav.html" target='_blank'>图片转base64</a></div>
     <div><a href="./sql-util/index.html" target='_blank'>meizu sql生成</a></div>
     <div><a href="./utils/formatImgUrl.html" target='_blank'>图片格式化</a></div>
+    <div><a href="./deal-secret/index.html" target='_blank'>简单加解密</a></div>
   </body>
 </html>
